monitoring/victorialogs/eventrouter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventrouter
  namespace: victorialogs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventrouter
  template:
    metadata:
      labels:
        app: eventrouter
    spec:
      serviceAccountName: eventrouter
      containers:
      - name: eventrouter
        image: registry.k8s.io/eventrouter/eventrouter:v0.4
        resources:
          limits:
            cpu: 50m
            memory: 64Mi
          requests:
            cpu: 10m
            memory: 32Mi
