monitoring/victorialogs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: victorialogs
  namespace: victorialogs
spec:
  selector:
    app: victorialogs
  ports:
    - protocol: TCP
      port: 9428
      targetPort: 9428
  type: ClusterIP
