monitoring/victorialogs/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: victorialogs
  namespace: victorialogs
spec:
  parentRefs:
    - name: internal-gateway
      namespace: gateway-system
  hostnames:
    - "victorialogs.vanillax.xyz"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: victorialogs
          port: 9428
